--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -14,8 +14,8 @@ import Layout from '../layouts/Layout.astro';
 >
   <Hero />
   <Services />
-  <Expertise />
-  <About />
-  <Testimonials />
+  <!-- <Expertise /> -->
+  <!-- <About /> -->
+  <!-- <Testimonials /> -->
   <Cta />
 </Layout>
