--- a/src/components/home/Services.astro
+++ b/src/components/home/Services.astro
@@ -2,21 +2,21 @@
 const services = [
   {
     step: '01',
-    name: 'Design',
+    name: 'Onboard',
     description:
-      'Lorem ipsum, dolor sit amet consectetur adipisicing elit. Maiores impedit perferendis suscipit eaque, iste dolor cupiditate blanditiis ratione.',
+      'We plan to make the onboarding of 1 new customer no more difficult then 1k new customers, with self service software with on call specialists to help your customers get started.',
   },
   {
     step: '02',
-    name: 'Develop',
+    name: 'Support',
     description:
-      'Lorem ipsum, dolor sit amet consectetur adipisicing elit. Maiores impedit perferendis suscipit eaque, iste dolor cupiditate blanditiis ratione.',
+      'Our software will help you record and track every consultation, so you can focus on helping your customers, and not on the paperwork.',
   },
   {
     step: '03',
-    name: 'Maintain',
+    name: 'Report',
     description:
-      'Lorem ipsum, dolor sit amet consectetur adipisicing elit. Maiores impedit perferendis suscipit eaque, iste dolor cupiditate blanditiis ratione.',
+      'Using the power of modern AI technology, we will help you easily write reports using the data you have collected.',
   },
 ];
 ---
@@ -24,7 +24,7 @@ const services = [
 <section class="py-16 sm:py-20">
   <div class="mx-auto max-w-2xl px-4 sm:px-6 lg:max-w-7xl lg:px-8">
     <div class="flex flex-col gap-12 sm:gap-16">
-      <h2 class="text-3xl font-medium tracking-tight sm:text-4xl">Services</h2>
+      <h2 class="text-3xl font-medium tracking-tight sm:text-4xl">What are we doing different</h2>
       <div class="grid gap-8 lg:grid-cols-3">
         {
           services.map((service) => (
