--- a/src/components/layout/Footer.astro
+++ b/src/components/layout/Footer.astro
@@ -79,24 +79,20 @@ const bottomLinks = [
 >
   <h2 id="footer-heading" class="sr-only">Footer</h2>
   <div class="mx-auto max-w-2xl px-4 sm:px-6 lg:max-w-7xl lg:px-8">
-    <div class="flex flex-col justify-between gap-12 sm:gap-16 lg:flex-row">
-      <div class="flex max-w-sm flex-col items-start gap-6 sm:gap-8">
+    <div class="flex flex-col justify-between gap-12 sm:gap-16 lg:flex-row items-center">
         <img
-          class="h-8 w-auto"
+          class="h-14 w-auto"
           width="65"
           height="40"
           :src="$store.theme.isDark ? '/assets/logo-inverted.svg' : '/assets/logo.svg'"
           alt="Stone"
         />
-        <p class="text-primary-950/70 dark:text-primary-200/70 text-base">
-          Stone is a premium Astro theme specially designed for Business, Marketing, SaaS and
-          Startup websites.
-        </p>
-        <p class="text-primary-950/70 dark:text-primary-200/70 text-sm">© 2023 Stone</p>
-      </div>
+        <div class="flex flex-col gap-4">
+          <a class="text-primary-950/70 dark:text-primary-200/70 text-base" href="mailto:info@medimis.co.uk">info@medimis.co.uk</a>
+        </div>
 
       <!-- Bottom links -->
-      <div class="grid max-w-xl flex-1 grid-cols-1 gap-8 sm:grid-cols-3">
+      <!-- <div class="grid max-w-xl flex-1 grid-cols-1 gap-8 sm:grid-cols-3">
         {
           bottomLinks.map((group) => (
             <div class="flex flex-col gap-4">
@@ -129,7 +125,7 @@ const bottomLinks = [
             </div>
           ))
         }
-      </div>
+      </div> -->
     </div>
   </div>
 </footer>
