--- a/src/components/layout/Header.astro
+++ b/src/components/layout/Header.astro
@@ -37,9 +37,9 @@ const links = [
         href="/"
         class="focus-visible:outline-primary-950 dark:group-focus-visible:outline-primary-200 rounded-md focus-visible:outline focus-visible:outline-2"
       >
-        <span class="sr-only">Stone</span>
+        <span class="sr-only">MediMis</span>
         <img
-          class="h-8 w-auto"
+          class="h-10 w-auto"
           width="65"
           height="40"
           :src="$store.theme.isDark ? '/assets/logo-inverted.svg' : '/assets/logo.svg'"
@@ -87,7 +87,7 @@ const links = [
       </button>
 
       <!-- Toggle menu -->
-      <button
+      <!-- <button
         type="button"
         class="text-primary-950 dark:text-primary-200 hover:bg-primary-500/10 dark:hover:bg-primary-400/10 ring-primary-950 inline-flex h-14 w-14 items-center justify-center rounded-full transition focus:outline-none focus-visible:ring-2"
         @click="open = !open"
@@ -123,7 +123,7 @@ const links = [
         </svg>
       </button>
     </div>
-  </div>
+  </div> -->
 
   <!-- Menu content -->
   <div
